--- a/src/app/header-sub-menu/header-sub-menu.component.css
+++ b/src/app/header-sub-menu/header-sub-menu.component.css
@@ -52,7 +52,7 @@ svg {
     display: flex;
 }
 .modal-header{
-    background-color: #0068b3;
+    background-color: #007bff;
     color: white;
 }
 .ng-invalid  { border: 1px solid red; } 
@@ -80,12 +80,33 @@ svg {
 }
 .search-btn{
     margin: 10px 0px;
+    margin-right: 20px;
+
 }
 .header-submenu_logout_findstore {
     display: flex;
 }
 .logout-section {
     margin-left: 20px;
+}
+.search-data-error-message {
+    color: red;
+}
+.length {
+    color: red;
+}
+.Number-of-stores {
+    font-size: 20px;
+    font-family: cursive;
+
+}
+.search-results-content {
+    font-size: 16px;
+    font-family: sans-serif;
+    color: #007bff;
+}
+.search-modal_button-div {
+    display: flex;
 }
 @media only screen and (max-width: 768px) {
     .StoreHeader-desktop {
