Create account changes

--- a/src/app/create-account/create-account.component.css
+++ b/src/app/create-account/create-account.component.css
@@ -150,4 +150,6 @@ input.ng-invalid.ng-touched
 .help-bpx{
     padding-right: 20px;
     color: red;
+    font-size: 12px;
+    padding-left: 15px;
 }
