--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -13,7 +13,7 @@
           <!-- <input  type="text" id="email" placeholder="Email" class="form-control" autofocus> -->
           <input type="email" class="form-control" placeholder="Email" name="email" [(ngModel)]="createuser.email" #email="ngModel" required > 
         </div>
-        <span class="help-bpx" *ngIf="email.touched && !email.valid ">Please enter the Email Value</span>
+        <span class="help-bpx" *ngIf="email.touched && !email.valid ">*Please enter the Email Value</span>
       </div>
       
       <div class="form-group">
@@ -23,7 +23,7 @@
         <div class="col-sm-9">
           <input type="text"  placeholder="name" class="form-control" name="name"  minlength="4" [(ngModel)]="createuser.name" #name="ngModel" required>
         </div>
-        <span class="help-bpx" *ngIf="name.touched && !name.valid ">Please enter the Name Value</span>
+        <span class="help-bpx" *ngIf="name.touched && !name.valid ">*Please enter the Name Value</span>
       </div>
  
       <!--<div class="form-group">
@@ -43,7 +43,7 @@
         <div class="col-sm-9">
           <input type="password" placeholder="Password" class="form-control" name="password"  [(ngModel)]="createuser.password" #password="ngModel" required>
         </div>
-        <span class="help-bpx" *ngIf="password.touched && !password.valid ">Please enter the Password Value</span>
+        <span class="help-bpx" *ngIf="password.touched && !password.valid ">*Please enter the Password Value</span>
       </div>
  
       <div class="form-group">
@@ -53,7 +53,7 @@
         <div class="col-sm-9">
           <input type="text"  placeholder=" User Name" class="form-control" name="userName" minlength="4"  [(ngModel)]="createuser.userName" #userName="ngModel" required>
         </div>
-        <span class="help-bpx" *ngIf="userName.touched && !userName.valid ">Please enter the userName Value</span>
+        <span class="help-bpx" *ngIf="userName.touched && !userName.valid ">*Please enter the userName Value</span>
       </div>
  
       <div class="form-group">
