--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -11,9 +11,9 @@
         
         <div class="col-sm-9">
           <!-- <input  type="text" id="email" placeholder="Email" class="form-control" autofocus> -->
-          <input type="email" class="form-control" placeholder="Email" name="email" [(ngModel)]="createuser.email" #email="ngModel" required > 
+          <input type="email" class="form-control" placeholder="Email" name="email" [(ngModel)]="createuser.email" #email="ngModel" required pattern="[\w-]+@([\w-]+\.)+[\w-]+"> 
         </div>
-        <span class="help-bpx" *ngIf="email.touched && !email.valid ">*Please enter the Email Value</span>
+        <span class="help-bpx" *ngIf="email.touched && !email.valid ">*Please enter valid Email ID</span>
       </div>
       
       <div class="form-group">
@@ -41,9 +41,9 @@
         <label for="password"  class="col-sm-3 control-label" minlength="4">Password</label>
         
         <div class="col-sm-9">
-          <input type="password" placeholder="Password" class="form-control" name="password"  [(ngModel)]="createuser.password" #password="ngModel" required>
+          <input type="password" placeholder="Password" class="form-control" name="password"  [(ngModel)]="createuser.password" #password="ngModel" required pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,10}$">
         </div>
-        <span class="help-bpx" *ngIf="password.touched && !password.valid ">*Please enter the Password Value</span>
+        <span class="help-bpx" *ngIf="password.touched && !password.valid ">*Please enter valid Password Value</span>
       </div>
  
       <div class="form-group">
