--- a/src/app/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/header-sub-menu/header-sub-menu.component.html
@@ -1,4 +1,9 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupported" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupported">
   <div class="menu-container-class">
     <div class="dropdown-container">
   <div ngbDropdown class="d-inline-block" *ngFor="let category of categories">
@@ -68,7 +73,8 @@
             </div>
         </div>
     </div>
-
+    </div>
+</nav>
       <!--
         <div class="menu-container" id="ng-app" ng-app ng-controller="getMenueData">
   <div class="menuList" ng-repeat="post in posts" >
