--- a/src/app/create-account/create-account.component.css
+++ b/src/app/create-account/create-account.component.css
@@ -153,3 +153,15 @@ input.ng-invalid.ng-touched
     font-size: 12px;
     padding-left: 15px;
 }
+
+.btn-primary:disabled {
+    background-color: grey;
+    border-color: grey;
+}
+
+.bs-popover-top {
+    left: 0 !important;
+}
+#ngb-popover-0 {
+    left: 0 !important;
+}
