--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -35,16 +35,16 @@
  
         </div>
       </div>-->
- 
+      
       <div class="form-group">
+        <label for="password"  class="col-sm-3 control-label" minlength="4">Password <img style= "width:20px; height:20px;" src= "../../assets/question_mark.jpg" ngbPopover="The Password should be 8-10 digits, Alphanumeric and should have atleast 1 uppercase alphabet " triggers="mouseenter:mouseleave"></label>
         
-        <label for="password"  class="col-sm-3 control-label" minlength="4">Password</label>
-        
-        <div class="col-sm-9">
+        <div class="col-sm-9" style="display:flex">
           <input type="password" placeholder="Password" class="form-control" name="password"  [(ngModel)]="createuser.password" #password="ngModel" required pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,10}$">
         </div>
         <span class="help-bpx" *ngIf="password.touched && !password.valid ">*Please enter valid Password Value</span>
       </div>
+      
  
       <div class="form-group">
         
