--- a/src/app/sign-in-button/sign-in-button.component.html
+++ b/src/app/sign-in-button/sign-in-button.component.html
@@ -19,8 +19,8 @@
       </div>
       <form action="#" #signInForm="ngForm" >
         <div class="form-group">
-          <label for="text"><b>UserId</b></label>
-          <input #userID type="text" class="form-control col-md-12 col-lg-12" id="userID" placeholder="Enter UserID" name="userID" required>
+          <label for="text"><b>UserName</b></label>
+          <input #userID type="text" class="form-control col-md-12 col-lg-12" id="userID" placeholder="Enter UserName" name="userID" required>
         </div>
         <div class="form-group">
           <label for="pwd"><b>Password</b></label>
